; ModuleID = '/home/carl/AnghaBench/jemalloc/test/unit/extr_hook.c_alloc_free_size.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/unit/extr_hook.c_alloc_free_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MALLOCX_TCACHE_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @alloc_free_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @alloc_free_size(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i8* @mallocx(i32 1, i32 0)
  store i8* %4, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i32 @free(i8* %5)
  %7 = call i8* @mallocx(i32 1, i32 0)
  store i8* %7, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @free(i8* %8)
  %10 = load i32, i32* @MALLOCX_TCACHE_NONE, align 4
  %11 = call i8* @mallocx(i32 1, i32 %10)
  store i8* %11, i8** %3, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* @MALLOCX_TCACHE_NONE, align 4
  %14 = call i32 @dallocx(i8* %12, i32 %13)
  ret void
}

declare dso_local i8* @mallocx(i32, i32) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @dallocx(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
